--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 			<scope>provided</scope>
-		<!-- /dependency  -->
+		</dependency --!>
 		
 	</dependencies>
 	
